# LUCE

./: .dockerignore  .env  .env.sample  .gitignore  CITATION.cff  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  restart_deployment.sh  test.txt
django_vm/: Vagrantfile
django_vm/jupyter/: 0) jupyter_kernel_test.ipynb  try_django.ipynb
django_vm/scripts/: bootstrap.sh  prepare_system.sh  quickstart.sh  run_django.sh  run_jupyter.sh  start.sh  tmux_django.sh  tmux_jupyter.sh
django_vm/src/: db.sqlite3
django_vm/try_django/: db.sqlite3  try_django.sublime-project  try_django.sublime-workspace
luce_dev/: README_DEV.md  quickstart.sh
luce_dev/.config/: jupyter_notebook_config.py  luce_motd
luce_dev/jupyter/: 1) Web3 Examples.ipynb  2) hello_luce.ipynb
luce_dev/scripts/: bootstrap.sh  prepare_django.sh  prepare_system.sh  quickstart.sh  run_servers_tmux.sh  start_servers.sh  start_servers_simple.sh  stop_servers.sh  x_run_servers_tmux_v2.sh
luce_multi/: Vagrantfile
luce_multi/.config/: custom.css
luce_multi/jupyter/: x) Kernel Test.ipynb
luce_multi/scripts/: bootstrap_psql.sh  prepare_django.sh  prepare_system.sh  quickstart.sh  run_ganache.sh  run_servers_tmux.sh  start_servers_simple.sh  x_run_servers_tmux_v2.sh
luce_multi/test/: Vagrantfile
luce_multi/test2/: Vagrantfile
luce_test/: Vagrantfile
luce_test/scripts/: bootstrap_lucedb.sh
luce_vm/: Vagrantfile  bootstrap.sh  entrypoint.sh  kernel_old.json  prepare_system.sh  requirements.txt
luce_vm/.config/: custom.css  luce_motd
luce_vm/.motd/: luce_motd
luce_vm/ganache_db/: !blockLogs!6  !blocks!0  !blocks!1  !blocks!5  !transactionReceipts!0x0ae9962eca29e709d29f53e64fb376be16ab7e6462ad2d16d566f97c99bb8b15  !transactionReceipts!0x3126ce880c0a99135c10fc98b3b09778f6b173e38f75d1dc77830e8a19e3702e  !transactionReceipts!0x36e4d889fcfc01f5c1c3b85ca17113032b898f1e593d0256d01f04083805b4a1  !transactionReceipts!0x54a60bac0e37c566c4b3c3692eb479b436c7dead5c9e04cdaf94d2df42999ef2  !transactionReceipts!0x6af9b06ee4c84e797ea8c0c786bd186d930cd4ce196273900d7425374bc087b5  !transactionReceipts!0xe6aa99f96f94a54c2ef1e7e232e410d285a53c341b47dd5f8e7b71b490af2c55  !transactions!0x0ae9962eca29e709d29f53e64fb376be16ab7e6462ad2d16d566f97c99bb8b15  !transactions!0x1a2fea6bc4561ee1c3b81877e54c5a71ea119e7144c7bf7c1a33541dac6d3f14  !transactions!0x6af9b06ee4c84e797ea8c0c786bd186d930cd4ce196273900d7425374bc087b5  !transactions!0xa24b4af31f8e35ba48585274d1a187791b8072f83866cc501aadac251a603d83  !transactions!0xe6aa99f96f94a54c2ef1e7e232e410d285a53c341b47dd5f8e7b71b490af2c55  !trie_db!0x02646ff7109d14676dd2512cdf5171e356987545881694ab337ce0a27bd23062  !trie_db!0x06be33e80a14198a99e061bd17ac5306a3256ffc61fbe5a40e81d5f83573ecf1  !trie_db!0x0a27b52b56d088ac939bd2d33aeccf114ea99d4b420b6634dc27dd51066c83a6  !trie_db!0x0a3b286ac9013e9fe2fd9eedb7d770f476176442b40ad2ae63b0b7386580455d  !trie_db!0x0a94f0ae9959508e6be168d447cb0a0f55905070924a1008b08f31185b5a3941  !trie_db!0x0c4c5696f213054d94bb7719fec874447b7d0b56c0ce409e9cfd46ac4bb68bb9  !trie_db!0x1076b3c55597762fb71585f7f6d0cb3f7a9d3a5f452bf569d7ffe05711c60594  !trie_db!0x112b591efdfce7a2334e5900cf879a588153eb7e0baa44db543e5f231ea9983b  !trie_db!0x12d74e9568679d361ef88fe41610375b23f7fcb25af62a42b66c041b04fd59d7  !trie_db!0x150d89d7e9814e4fa1137f9d3f843c321341fdcdabc9d7454d6d0bcc74753963  !trie_db!0x1566bd16bf057d5c54c7c97f12a759ef30d1330ae765aa59566813a0676e5c35  !trie_db!0x15917d2d3af2d28101d0f02f8931fbbadea7c608270cf34350fe57a424f6b6b7  !trie_db!0x1a575e7711f672357344ba4e21770eed5ebc0e87d06a51b93b6072a5dc2bdaba  (+140 more)
luce_vm/html/: index.html  (+1 more)
notebooks/: Dockerfile
notes/: 2019-06-26 11.34 Vagrant Linux VM.txt
resources/: EXPLANATIONS.txt
scripts/: create_users.py  deploy.sh  entrypoint.sh  init_postgres.sh
test/: Vagrantfile  bootstrap.sh
test_vm/: Vagrantfile  bootstrap.sh
tests/: __init__.py  test_api.py
(+624 files in other folders)
