[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "0.1.0"
requires-python = ">=3.7"
name = "luce"
description = "LUCE: A Blockchain-based data sharing platform for monitoring data license accountability and compliance."
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Vincent Emonet", email = "vincent.emonet@gmail.com" },
]
maintainers = [
    { name = "Vincent Emonet", email = "vincent.emonet@gmail.com" },
]
keywords = [
    "Python",
    "data sharing",
    "blockchain",
    "ethereum",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "django == 3.0",
    "django-extensions",
    "psycopg2 ==2.8.6",
    "py-solc",
    "py-solc-x",
    "web3",
    "ipykernel",
    "ethereum ==2.3.1",
    "rlp ==1.0.1",
    "eth_utils >=1.0.3",
    "djangorestframework == 3.14.0"
]


[project.optional-dependencies]
test = [
    "pytest >=7.1.3",
    "pytest-cov >=3.0.0",
    "coveralls >=3.3.0",
    "ruff >=0.0.189",
    "isort >=5.11.0",
    "mypy >=0.991",
    "black >= 22.8.0",
]
dev = [
    "pre-commit >=2.17.0",
]


[project.urls]
Homepage = "https://github.com/vemonet/luce"
Documentation = "https://github.com/vemonet/luce"
History = "https://github.com/vemonet/luce/releases"
Tracker = "https://github.com/vemonet/luce/issues"
Source = "https://github.com/vemonet/luce"


# ENVIRONMENTS AND SCRIPTS
[tool.hatch.envs.default]
features = [
    "test",
    "dev",
]
# post-install-commands = [
#     "pre-commit install",
# ]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
cov = "test --cov src {args}"
dev = "python tests/dev.py {args}"
fmt = [
    "isort src tests",
    "black src tests",
    "ruff src tests --fix",
]
check = [
    "isort --check-only --diff src",
    "ruff src tests",
    "black src tests --check",
    "mypy src",
]
all = [
    "format",
    "check",
    "cov",
]

# TOOLS

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
omit = ["tests/*"]


[tool.mypy]
strict = true
implicit_reexport = true
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
# disallow_untyped_calls = false
# disallow_untyped_defs = false
# disallow_any_generics = false


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:httpx.*:"
]


[tool.isort]
line_length = 120
skip = ["__init__.py"]
profile = "black"


[tool.black]
color = true
line-length = 120
target-version = ['py37']
skip-string-normalization = false


# https://github.com/charliermarsh/ruff#supported-rules
[tool.ruff]
target-version = "py37"
line-length = 120
select = [
    "A",
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    # "FBT", # flake8-boolean-trap
    # "I",   # isort
    "ICN",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "SIM",
    "T",
    "TID",
    "UP",
    "W",  # pycodestyle warnings
    "YTT",
]

ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "B006", # do not use mutable data structures for argument defaults
    "C901", # too complex
    "S101", # Use of `assert` detected
    "T201", "T203", # remove print and pprint
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

# [tool.ruff.isort]
# known-third-party = ["rdflib_endpoint"]
